@@ -1,0 +1,28 @@
+## Copyright (C) 2019 John Donoghue  <john.donoghue@ieee.org>
+##
+## This program is free software; you can redistribute it and/or modify it under
+## the terms of the GNU General Public License as published by the Free Software
+## Foundation; either version 3 of the License, or (at your option) any later
+## version.
+##
+## This program is distributed in the hope that it will be useful, but WITHOUT
+## ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+## FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+## details.
+##
+## You should have received a copy of the GNU General Public License along with
+## this program; if not, see <http://www.gnu.org/licenses/>.
+
+## -*- texinfo -*-
+## @deftypefn {Function File} {@var{res} =} fclose (@var{obj})
+## Closes parallel connection @var{obj} 
+## @end deftypefn
+
+function fclose(pp)
+
+  if (nargin == 1)
+    pp_close (pp);
+  else
+    print_usage();
+  end  
+end
