@@ -38,6 +38,13 @@ Summary of important user-visible changes for instrument-control 0.4.0+
         get
         set
 
+  ** PARALLEL:
+     Added overload functions for: 
+        fclose
+        fopen
+        fread
+        fwrite
+
   ** insthwinfo: updated to show i2c ports
  
   ** added toolkit manual
